增加系统管理相关表格

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,11 @@ spring:
 
 mybatis:
   mapper-locations: mapper
-  type-aliases-package: com.springboot.demo.entity
+  type-aliases-package: com.springboot.demo.entity,com.springboot.demo.entity.*
+
+logging:
+  level:
+    com:
+      springboot:
+        demo:
+          mapper: debug
