--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <fastjson.version>1.2.66</fastjson.version>
         <easyexcel.version>2.1.6</easyexcel.version>
+        <assertj-core.version>3.16.1</assertj-core.version>
     </properties>
 
     <dependencies>
@@ -119,6 +120,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
             <version>${easyexcel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
         </dependency>
 
     </dependencies>
